# honk_tts

./: .gitignore  README.md  build.bat  build.sh  dev.bat  dev.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  ci.yml  release.yml
installer/: HonkTTS.Installer.sln
installer/src/HonkTTS.Installer/: HonkTTS.Installer.csproj  InstallerCli.cs  Program.cs
installer/src/HonkTTS.Installer/Models/: InstallConfig.cs  InstallManifest.cs  PlatformInfo.cs
installer/src/HonkTTS.Installer/Preflight/: SystemPrerequisites.cs
installer/src/HonkTTS.Installer/Services/: DownloadService.cs  ProcessRunner.cs
installer/src/HonkTTS.Installer/Steps/: EspeakStep.cs  IInstallStep.cs  ModelWarmupStep.cs  PackagesStep.cs  PythonStep.cs  ServerFilesStep.cs  VenvStep.cs
server/: requirements.txt  tts_server.py
server/scripts/: start_tts.bat  start_tts.sh  test_server.py  test_tts.bat  test_tts.sh
