[tool.poetry]
name = "honk_tts"
version = "0.1.0"
description = "TSS server for Unitystation"
authors = ["Gilles <43683714+corp-0@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11"
TTS = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
